--- a/.github/workflows/Build-OpenWRT.yml
+++ b/.github/workflows/Build-OpenWRT.yml
@@ -100,7 +100,7 @@ jobs:
       uses: klever1988/cachewrtbuild@main
       with:
         ccache: 'true'
-        prefix: openwrt
+        prefix: ${{ github.workspace }}/openwrt
 
     - name: Compile the firmware
       id: compile
@@ -297,7 +297,7 @@ jobs:
       uses: klever1988/cachewrtbuild@main
       with:
         ccache: 'true'
-        prefix: openwrt
+        prefix: ${{ github.workspace }}/openwrt
 
     - name: Compile the firmware
       id: compile
@@ -322,7 +322,7 @@ jobs:
         mkdir -p ./firmware
         mkdir -p ./package
         rm -rf $(find ../bin/targets/ -name "packages" -o -name "*.buildinfo" -o -name "sha256sums" -o -name "*.manifest")
-        cp -rf $(find ../bin/targets/{*combind*} -type f) ./firmware/
+        cp -rf $(find ../bin/targets/ -type f -name "*combind*") ./firmware/
         cp -rf $(find ../bin/packages/ -type f -name "*.ipk") ./package/
         cd ./package
         tar -zcvf IPK.tar.gz *
@@ -476,7 +476,7 @@ jobs:
       uses: klever1988/cachewrtbuild@main
       with:
         ccache: 'true'
-        prefix: openwrt
+        prefix: ${{ github.workspace }}/openwrt
 
     - name: Compile the firmware
       id: compile
@@ -501,7 +501,7 @@ jobs:
         mkdir -p ./firmware
         mkdir -p ./package
         rm -rf $(find ../bin/targets/ -name "packages" -o -name "*.buildinfo" -o -name "sha256sums" -o -name "*.manifest")
-        cp -rf $(find ../bin/targets/{*combind*} -type f) ./firmware/
+        cp -rf $(find ../bin/targets/ -type f -name "*combind*") ./firmware/
         cp -rf $(find ../bin/packages/ -type f -name "*.ipk") ./package/
         cd ./package
         tar -zcvf IPK.tar.gz *
@@ -656,7 +656,7 @@ jobs:
       uses: klever1988/cachewrtbuild@main
       with:
         ccache: 'true'
-        prefix: openwrt
+        prefix: ${{ github.workspace }}/openwrt
 
     - name: Compile the firmware
       id: compile
@@ -681,7 +681,7 @@ jobs:
         mkdir -p ./firmware
         mkdir -p ./package
         rm -rf $(find ../bin/targets/ -name "packages" -o -name "*.buildinfo" -o -name "sha256sums" -o -name "*.manifest" -o -name "profiles.json")
-        cp -rf $(find ../bin/targets/{*combind*} -type f) ./firmware/
+        cp -rf $(find ../bin/targets/ -type f -name "*combind*") ./firmware/
         cp -rf $(find ../bin/packages/ -type f -name "*.ipk") ./package/
         cd ./package
         tar -zcvf IPK.tar.gz *
